MRN-581 add some fixes after tl review